# megaprint.hpp

./: .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  iwyu.imp  justfile
examples/: 00_simple.cpp  01_basic_types.cpp  02_numbers.cpp  03_chars_and_strings.cpp  04_pointers.cpp  05_smart_pointers.cpp  06_circular.cpp  07_nested_struct.cpp  08_functions.cpp  09_custom_options.cpp  10_user_defined_type.cpp  11_filesystem_path.cpp  12_arrays.cpp  12_arrays_and_span.cpp  13_sequences.cpp  14_stack_queue_and_priority_queue.cpp  15_map_and_set.cpp  16_multimap_and_multiset.cpp  17_pair_and_tuple.cpp  18_optional.cpp  19_expected.cpp  19_variant.cpp  20_any.cpp  21_chrono.cpp  22_errors_and_exceptions.cpp  23_byte_and_bits.cpp  24_atomic.cpp  CMakeLists.txt
include/megaprint/: megaprint.hpp
scripts/: prettify-coverage-report.sh
test/: CMakeLists.txt  test_bool.cpp
